plugins{
    id 'war'
    id 'org.springframework.boot' version '2.6.4'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
}

sourceCompatibility = '1.8'

allprojects {

    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'java-library'

    sourceCompatibility = '1.8'

    bootJar {
        enabled = false
    }

    jar {
        enabled = true
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.springframework.boot:spring-boot-starter'
        implementation 'org.springframework.boot:spring-boot-starter-security'
        implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        implementation 'org.mapstruct:mapstruct:1.4.2.Final'
        annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        implementation ('org.springframework.boot:spring-boot-starter-hateoas')
    }

    test {
        useJUnitPlatform()
    }



}
